3 files modified, 3 added - End of lesson 17 (review)

--- a/src/app/list-manager/list-manager.component.css
+++ b/src/app/list-manager/list-manager.component.css
@@ -13,7 +13,7 @@
 
 .todo-app::before, .todo-app::after{
   content: '';
-  position: 'absolute';
+  position: absolute;
   z-index: -1;
   height: 4px;
   background: white;
